# matcher

./: .gitignore  .gitmodules  Dockerfile  Dockerfile.scheduler  LICENSE  Makefile  README.md  docker-compose.yml  docker-entrypoint.sh  fix_grpc_autogen.sh  main.py  pyproject.toml  run_cli.py  run_tests.py  tree
adapter/calc/: main.py
adapter/grpc/: mapper.py  server.py
entity/: errors.py  form.py  group.py  parameters.py  user.py
infrastructure/: README.md  calculate_normalization_weights.py  config.py  logging_utils.py  normalization_weights.ipynb  user_vector_utils.py
infrastructure/cli/: README.md  __init__.py  actions.py  (+4 more)
recommendation/: PERCENTILE_NORMALIZATION.py  ZSCORE_NORMALIZATION.py  __init__.py  normalization.py  normalization_strategy.py  statistics.py  vector_ops.py
recommendation_system/: db_management_utils.py
repository/: form_dto.py  form_repository.py  group_dto.py  group_recommendation_cache.py  group_recommendation_repository.py  group_repository.py  group_request_in_memory.py  group_request_repository.py  notification_repository.py  notify_repository.py  user_repository.py
tests/: README.md  rec_system_test.py  run_repository_tests.py  run_tests.py  test_cli_functions.py  test_cli_integration.py  test_form_repository.py  test_group_recommendation_repository.py  test_group_repository.py  test_group_request_repository.py  test_notification_repository.py  test_recommendation_system.py  test_usecase_integration.py
usecase/: cache.py  form.py  form_query.py  group.py  group_query.py  interface.py  user_query.py  user_repository.py
(+29 files in other folders)
